"Make Duplicates Real" crashes in Solid mode. #38647

Closed
opened 2014-02-15 15:54:55 +01:00 by Leon Cheung · 11 comments
Member

System Information
Win7 64bit | 2700M

Blender Version
Broken: 2.69.10 b096845
Worked: 2.69 Official release (r60995)

Short description of error
When using Make Duplicates Real operator for group instance, it crashes in Solid mode, but no problem when in Wireframe node.

Exact steps for others to reproduce the error

  1. Open the attached file, group the curve object,
  2. Add a group instance, then Ctrl Shift A to make it real, which cause blender crashing.

P.S: I tried other objects, they all work fine. So I suppose there might be something wrong with this curve object? FYI. Thanks.

make_real.blend

**System Information** Win7 64bit | 2700M **Blender Version** Broken: 2.69.10 b096845 Worked: 2.69 Official release (r60995) **Short description of error** When using **Make Duplicates Real** operator for group instance, it crashes in Solid mode, but no problem when in Wireframe node. **Exact steps for others to reproduce the error** 1. Open the attached file, group the curve object, 2. Add a group instance, then **Ctrl Shift A** to make it real, which cause blender crashing. P.S: I tried other objects, they all work fine. So I suppose there might be something wrong with this curve object? FYI. Thanks. [make_real.blend](https://archive.blender.org/developer/F77360/make_real.blend)
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Author
Member

Added subscriber: @ZhangYu

Added subscriber: @ZhangYu
Campbell Barton self-assigned this 2014-02-16 01:41:11 +01:00
Campbell Barton removed their assignment 2014-02-16 05:56:15 +01:00
Sergey Sharybin was assigned by Campbell Barton 2014-02-16 05:56:15 +01:00

Added subscriber: @ideasman42

Added subscriber: @ideasman42

Tested but I cant redo 78bd029bbe

Tested but I cant redo 78bd029bbe
Author
Member

I've asked two friends to test it, all confirmed, with 78bd029bbe both on Linux (32bit) and Windows. Quite strange.
I've uploaded another file, for which, just hit Shift Ctrl A right after opening.

make_real-b.blend

I've asked two friends to test it, all confirmed, with 78bd029bbe both on Linux (32bit) and Windows. Quite strange. I've uploaded another file, for which, just hit Shift Ctrl A right after opening. [make_real-b.blend](https://archive.blender.org/developer/F77448/make_real-b.blend)

Added subscriber: @ignatz

Added subscriber: @ignatz

On a windows 64-bit release this does not crash using the last official release ( r60995 )...

However, it does crash on a newer release ( hash: 77a15ab )

On a windows 64-bit release this does not crash using the last official release ( r60995 )... However, it does crash on a newer release ( hash: 77a15ab )

This issue was referenced by blender/blender-addons-contrib@e7ce4f22fb

This issue was referenced by blender/blender-addons-contrib@e7ce4f22fb57d732750d756bf57d6ebcd307db85

This issue was referenced by e7ce4f22fb

This issue was referenced by e7ce4f22fb57d732750d756bf57d6ebcd307db85

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit e7ce4f22fb.

Closed by commit e7ce4f22fb.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
5 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#38647
No description provided.