Fix T38647: "Make Duplicates Real" crashes in Solid mode

This operator created new object and didn't tag them for update,
which made it so their data isn't ready at the time of drawing.